@@ -100,6 +100,13 @@ protocol = postfix
 # 'query_timelimit' is the query timeout in milliseconds.
 # DEFAULT: query_timelimit = 5000
 
+# 'pool_maxthreads' is the maximum threadcount per pool. You may have
+# to raise the limit from the default if you get more than 100 
+# queries per second and/or have slow dns servers. Rule of thumb would be
+# decide how many queries you want grossd to be able to handle per second,
+# and multiply that with query_timelimit (in seconds, of course). 
+# DEFAULT: pool_maxthreads = 100
+
 # 'block_threshold' is the threshold after which grossd sends 
 # a permanent error to the client. Every check that considers client_ip
 # as suspicious returns a value (check weight). When sum of these
